2018-07-13         Arnold D. Robbins     <arnold@skeeve.com>

	* builtin.c (format_nan_inf): New function to generate +nan, -nan,
	+inf, -inf, so that gawk output for NaN and INF always has a sign.
	Handles regular and MPFR.
	(out_of_range): New function to check if a value is out of range,
	both regular and MPFR.
	(format_tree): Use them in out of range calculation.  Check for out
	of range in floating point formats also. Allow new *undocumented*
	'P' flag to not do out of range formantting. Used mainly for
	the test program.
	* awk.h (out_of_range, format_nan_inf): Declare functions.
	* mpfr.c (mpg_format_val): Check for out of range and format the
	the result appropriately if so.
	* node.c (r_format_val): Ditto.

2018-06-27         Arnold D. Robbins     <arnold@skeeve.com>

	* config.guess, config.sub: Updated from GNULIB.

2018-06-22         Andrew J. Schorr      <aschorr@telemetry-investments.com>

	* node.c (r_force_number): If strtod returns ERANGE, accept the
	value as being numeric instead of forcing it to zero. The impact
	is that huge string values that overflow IEEE 754 limits will now
	be converted to inf or -inf instead of 0. Thanks to Daniel
	Pettet for reporting this issue.

2018-06-17         Arnold D. Robbins     <arnold@skeeve.com>

	Fix a corner case with EPIPE to stdout/stderr.
	Thanks to Peng Yu for the report.

	* io.c (close_io): Add new parameter for indicating EPIPE happened,
	update the code to set it if so.
	* awk.h (close_io): Revise declaration.
	* debug.c (close_all): Change call to close_io().
	* interpret.h (interpret): For Op_atexit, if got an EPIPE, call
	die_via_sigpipe().

2018-05-24         Arnold D. Robbins     <arnold@skeeve.com>

	* awkgram.y (add_lint): For no-effect case, also check for
	Op_push_i.  Makes statements consisting of a single constant
	trigger the warning.

2018-05-23         Arnold D. Robbins     <arnold@skeeve.com>

	* config.guess, config.sub: Updated from GNULIB.
