@@ -1,3 +1,7 @@
+2018-07-27         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* back89.ok, funstack.ok, gsubtst5.ok: Update after code changes.
+
 2018-07-13         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* fmtspcl.awk, fmtspcl.tok, numrange.ok: Revised after code changes
