@@ -1,3 +1,8 @@
+2018-07-27         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* re.c (make_regexp): Add warnings for unknown escape sequences,
+	similar to what we already do for strings.
+
 2018-07-13         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* builtin.c (format_nan_inf): New function to generate +nan, -nan,
